--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="./src/assets/fav-icon.svg" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NueStirng</title>
+    <title>NeuStirng</title>
   </head>
   <body class="font-montserrat">
     <div id="root"></div>
